--- a/src/components/responsive.scss
+++ b/src/components/responsive.scss
@@ -51,16 +51,16 @@
     .main-nav {
         display: none;
     }
+
     .main-nav-mobile {
         // border: solid ;
         visibility: visible;
         display: block;
         height: 25vmax;
-        top: -20%;
-        // bottom: 0%;
-        left: 0;
+        top: 100%;
+        left: 0%;
         position: absolute;
-        width: 100vw;
+        width: 100%;
     }
 
     .main-nav-mobile ul {
@@ -69,7 +69,7 @@
         box-shadow: 0px 5px 7px #0000006b;
         position: absolute;
         text-align: right;
-        top: 35%;
+        top: 0%;
         left: 0%;
         width: 100%;
     }
@@ -167,23 +167,22 @@
         margin: 3px auto;
         opacity: 1 !important;
         right: 0;
-        top: 7vh;
+        top: 0;
         position: absolute;
         padding: 0vw;
         width: 100vw !important;
         z-index: 999;
-    }
-
-    .dropdown-content a {
-        border-bottom: solid 1px #fff !important;
-        color: #fff !important;
-        display: block;
-        font-size: 3vw;
-        letter-spacing: 1px;
-        padding: 2vh 0.5vw;
-        margin: 0vh 0vw;
-        text-decoration: none;
-        text-align: center;
+        a {
+            border-bottom: solid 1px #fff !important;
+            color: #fff !important;
+            display: block;
+            font-size: 3vw;
+            letter-spacing: 1px;
+            padding: 2vh 0.5vw;
+            margin: 0vh 0vw;
+            text-decoration: none;
+            text-align: center;
+        }
     }
 
     .icon {
@@ -191,7 +190,6 @@
         display: block;
         right: 5%;
         top: 30%;
-        /* padding: 0.5em; */
         position: absolute;
         z-index: 5;
     }
